GiRaFFE/GiRaFFE_HO_A2B: Corrected some poorly considered dependencies. Continued work on the unit test.

--- a/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
@@ -75,7 +75,7 @@
     "## Step 1: Creating the header files \\[Back to [top](#toc)\\]\n",
     "$$\\label{headers}$$\n",
     "\n",
-    "We start in the usual way - import the modules we need, set `DIM = 3`, and run the function `gho.GiRaFFE_Higher_Order_v2()` to build equations (although, in this case, we mostly care that it declares gridfunctions). We will also import the Levi-Civita symbol from `WeylScalars_Cartesian` and use it to set the Levi-Civita tensor $\\epsilon^{ijk} = [ijk]/\\sqrt{\\gamma}$."
+    "We start in the usual way - import the modules we need and set `DIM = 3`. We will also import the Levi-Civita symbol from `WeylScalars_Cartesian` and use it to set the Levi-Civita tensor $\\epsilon^{ijk} = [ijk]/\\sqrt{\\gamma}$."
    ]
   },
   {
@@ -95,9 +95,8 @@
     "DIM = 3\n",
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
-    "# Import the GiRaFFE_HO_v2 module and run its function to build BU\n",
-    "import GiRaFFE_HO.GiRaFFE_Higher_Order_v2 as gho\n",
-    "gho.GiRaFFE_Higher_Order_v2()\n",
+    "# Register the gridfunction gammadet. This determinant will be calculated separately\n",
+    "gammadet = gri.register_gridfunctions(\"AUXEVOL\",\"gammadet\")\n",
     "\n",
     "# Import the Levi-Civita symbol and build the corresponding tensor.\n",
     "# We already have a handy function to define the Levi-Civita symbol in WeylScalars\n",
@@ -109,7 +108,7 @@
     "        for k in range(DIM):\n",
     "            LCijk = LeviCivitaDDD[i][j][k]\n",
     "            #LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gho.gammadet)\n",
-    "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gho.gammadet)\n"
+    "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gammadet)\n"
    ]
   },
   {
@@ -121,7 +120,7 @@
     "### Step 1.a: A useful function \\[Back to [top](#toc)\\]\n",
     "$$\\label{bu_to_print}$$\n",
     "\n",
-    "We will now create the structures we need: `AD_dD` for $A_{i,j}$ and `BU` for $B^i$. We will also define a quick function `set_BU_to_print()`; this will allow us to quickly rebuild the data structure that we will pass to `fin.FD_outputC()` each time we change `BU`.\n",
+    "We will now create the structures we need: register the gridfunctions `AD` and `BU`, declare `AD_dD` for $A_{i,j}$ and zero `BU` for $B^i$. We will also define a quick function `set_BU_to_print()`; this will allow us to quickly rebuild the data structure that we will pass to `fin.FD_outputC()` each time we change `BU`.\n",
     "\n",
     "Also, we'll build the standard form of `BU` that we will use: $$B^i = \\epsilon^{ijk} A_{k,j}.$$"
    ]
@@ -133,6 +132,8 @@
    "outputs": [],
    "source": [
     "# Step 1.a: A useful function\n",
+    "AD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AD\")\n",
+    "BU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"BU\")\n",
     "AD_dD = ixp.declarerank2(\"AD_dD\",\"nosym\")\n",
     "BU = ixp.zerorank1() # BU is already registered as a gridfunction, but we need to zero its values and declare it in this scope.\n",
     "# We can use this function to compactly reset to expressions to print at each FD order.\n",
@@ -416,7 +417,7 @@
     "// Declare boundary condition FACE_UPDATE function,\n",
     "// which fills in the ghost zones with successively\n",
     "// lower order finite differencing\n",
-    "void AtoB(const int ORDER, const int Nxx_plus_2NGHOSTS[3], const REAL *in_gfs, REAL *aux_gfs, const REAL dxx[3],\n",
+    "void AtoB(const int ORDER, const int Nxx_plus_2NGHOSTS[3], const REAL *in_gfs, REAL *auxevol_gfs, const REAL dxx[3],\n",
     "          const int i0min, const int i0max, \n",
     "          const int i1min, const int i1max, \n",
     "          const int i2min, const int i2max, \n",
@@ -518,19 +519,19 @@
    "source": [
     "%%writefile -a $outdir/driver_AtoB.c\n",
     "\n",
-    "void driver_A_to_B(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3], const REAL dxx[3],const REAL *in_gfs,REAL *aux_gfs) {\n",
+    "void driver_A_to_B(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3], const REAL dxx[3],const REAL *in_gfs,REAL *auxevol_gfs) {\n",
     "  \n",
     "  int ORDER = NGHOSTS*2;\n",
     "  for(int ii=0;ii<Nxx_plus_2NGHOSTS[2]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[0];ii++) {\n",
-    "      aux_gfs[IDX4pt(BU0GF,ii)] = 1.0 / 0.0;\n",
-    "      aux_gfs[IDX4pt(BU1GF,ii)] = 1.0 / 0.0;\n",
-    "      aux_gfs[IDX4pt(BU2GF,ii)] = 1.0 / 0.0;\n",
+    "      auxevol_gfs[IDX4pt(BU0GF,ii)] = 1.0 / 0.0;\n",
+    "      auxevol_gfs[IDX4pt(BU1GF,ii)] = 1.0 / 0.0;\n",
+    "      auxevol_gfs[IDX4pt(BU2GF,ii)] = 1.0 / 0.0;\n",
     "  }\n",
     "\n",
     "  //printf(\"Starting A to B driver with Order = %d...\\n\",ORDER);\n",
     "  int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
     "  int imax[3] = { Nxx[0]+NGHOSTS, Nxx[1]+NGHOSTS, Nxx[2]+NGHOSTS };\n",
-    "  AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0],imin[1],imax[1],imin[2],imax[2], NUL,NUL,NUL);\n"
+    "  AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, auxevol_gfs,dxx, imin[0],imax[0],imin[1],imax[1],imin[2],imax[2], NUL,NUL,NUL);\n"
    ]
   },
   {
@@ -562,19 +563,19 @@
     "      // After updating each face, adjust imin[] and imax[] \n",
     "      //   to reflect the newly-updated face extents.\n",
     "      ORDER -= 2;\n",
-    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); \n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, auxevol_gfs,dxx, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); \n",
     "      if(ORDER!=0) imin[0]--;\n",
-    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); \n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, auxevol_gfs,dxx, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); \n",
     "      if(ORDER!=0) imax[0]++;\n",
     "\n",
-    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); \n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, auxevol_gfs,dxx, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); \n",
     "      if(ORDER!=0) imin[1]--;\n",
-    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); \n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, auxevol_gfs,dxx, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); \n",
     "      if(ORDER!=0) imax[1]++;\n",
     "\n",
-    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); \n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, auxevol_gfs,dxx, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); \n",
     "      if(ORDER!=0) imin[2]--;\n",
-    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, aux_gfs,dxx, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); \n",
+    "      AtoB(ORDER, Nxx_plus_2NGHOSTS, in_gfs, auxevol_gfs,dxx, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); \n",
     "      if(ORDER!=0) imax[2]++;\n",
     "    }\n",
     "}\n"
@@ -688,7 +689,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb to latex\n",
-      "[NbConvertApp] Writing 63557 bytes to Tutorial-GiRaFFE_HO_C_code_library-A2B.tex\n",
+      "[NbConvertApp] Writing 65777 bytes to Tutorial-GiRaFFE_HO_C_code_library-A2B.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
