--- a/Tutorial-ADM_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_Initial_Data-TOV.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1051, 1051, 1051, 1051, 1051)\n",
+      "Just generated a TOV star with R_Schw = 0.956568142523 , M = 0.14050303285288188 , M/R_Schw = 0.14688240869316446 .\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 2: The TOV equations\n",
     "\n",
@@ -229,14 +238,14 @@
     "    \n",
     "    if( r_Schw < 1e-4 or m <= 0.): \n",
     "        m = 4*math.pi/3. * rho*r_Schw**3\n",
-    "        dPdrSchw = -(c2*rho + P)*(4.*math.pi/3.*r_Schw*rho*G_over_c2 + 4.*math.pi*r_Schw*P*G_over_c4)/(1.-8.*math.pi*rho*r_Schw*r_Schw*G_over_c2)\n",
-    "        drbardrSchw = 1./(1. - 8.*math.pi*rho*r_Schw*r_Schw*G_over_c2)**0.5\n",
+    "        dPdrSchw = -(rho + P)*(4.*math.pi/3.*r_Schw*rho + 4.*math.pi*r_Schw*P)/(1.-8.*math.pi*rho*r_Schw*r_Schw)\n",
+    "        drbardrSchw = 1./(1. - 8.*math.pi*rho*r_Schw*r_Schw)**0.5\n",
     "    else:\n",
-    "        dPdrSchw = -(c2*rho + P)*(m*G_over_c2 + 4.*math.pi*r_Schw**3*P*G_over_c4)/(r_Schw*r_Schw*(1.-2.*m/r_Schw*G_over_c2))\n",
-    "        drbardrSchw = 1./(1. - 2.*m/r_Schw*G_over_c2)**0.5*rbar/r_Schw\n",
+    "        dPdrSchw = -(rho + P)*(m + 4.*math.pi*r_Schw**3*P)/(r_Schw*r_Schw*(1.-2.*m/r_Schw))\n",
+    "        drbardrSchw = 1./(1. - 2.*m/r_Schw)**0.5*rbar/r_Schw\n",
     "    \n",
     "    dmdrSchw  =  4.*math.pi*r_Schw*r_Schw*rho\n",
-    "    dnudrSchw = -2./(P + c2*rho)*dPdrSchw\n",
+    "    dnudrSchw = -2./(P + rho)*dPdrSchw\n",
     "    return [dPdrSchw, dmdrSchw, dnudrSchw, drbardrSchw]\n",
     "\n",
     "def integrateStar( eos, P, dumpData = False):\n",
@@ -272,21 +281,21 @@
     "\n",
     "    # Apply integration constant to ensure rbar is continuous across TOV surface\n",
     "    for ii in range(len(rbarArr)):\n",
-    "        rbarArr[ii] *= 0.5*(np.sqrt(R_Schw*(R_Schw - 2.0*M*G_over_c2)) + R_Schw - M*G_over_c2) / rbarArr[-1]\n",
+    "        rbarArr[ii] *= 0.5*(np.sqrt(R_Schw*(R_Schw - 2.0*M)) + R_Schw - M) / rbarArr[-1]\n",
     "    \n",
     "    nuArr_np = np.array(nuArr)\n",
     "    # Rescale solution to nu so that it satisfies BC: exp(nu(R))=exp(nutilde-nu(r=R)) * (1 - 2m(R)/R)\n",
     "    #   Thus, nu(R) = (nutilde - nu(r=R)) + log(1 - 2*m(R)/R)\n",
-    "    nuArr_np = nuArr_np - nuArr_np[-1] + math.log(1.-2.*mArr[-1]*G_over_c2/r_SchwArr[-1])\n",
+    "    nuArr_np = nuArr_np - nuArr_np[-1] + math.log(1.-2.*mArr[-1]/r_SchwArr[-1])\n",
     "\n",
     "    r_SchwArrExtend_np = 10.**(np.arange(0.01,5.0,0.01))*r_SchwArr[-1]\n",
     "    \n",
     "    r_SchwArr.extend(r_SchwArrExtend_np)\n",
     "    mArr.extend(r_SchwArrExtend_np*0. + M)\n",
     "    PArr.extend(r_SchwArrExtend_np*0.)\n",
-    "    exp2phiArr_np = np.append( np.exp(nuArr_np), 1. - 2.*M*G_over_c2/r_SchwArrExtend_np)\n",
-    "    nuArr.extend(np.log(1. - 2.*M*G_over_c2/r_SchwArrExtend_np))\n",
-    "    rbarArr.extend( 0.5*(np.sqrt(r_SchwArrExtend_np**2 - 2.*M*G_over_c2*r_SchwArrExtend_np) + r_SchwArrExtend_np - M*G_over_c2) )\n",
+    "    exp2phiArr_np = np.append( np.exp(nuArr_np), 1. - 2.*M/r_SchwArrExtend_np)\n",
+    "    nuArr.extend(np.log(1. - 2.*M/r_SchwArrExtend_np))\n",
+    "    rbarArr.extend( 0.5*(np.sqrt(r_SchwArrExtend_np**2 - 2.*M*r_SchwArrExtend_np) + r_SchwArrExtend_np - M) )\n",
     "\n",
     "    # Appending to a Python array does what one would reasonably expect.\n",
     "    #   Appending to a numpy array allocates space for a new array with size+1,\n",
@@ -362,9 +371,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1051, 1051, 1051, 1051, 1051)\n",
+      "Just generated a TOV star with R_Schw = 9.565681425227099e-01 , M = 1.405030328528819e-01 , M/R_Schw = 1.468824086931645e-01 .\n",
+      "TOV initial data test PASSED.\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3: Code Validation against TOV.TOV_Solver module\n",
     "\n",
@@ -400,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
