TOV Solver PPEOS: fixed major bug in the computation of eps_cold in one of the functions. Added some diagnostic print statements to the TOV solver. Will remove that in a later commit

--- a/Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb
+++ b/Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb
@@ -386,12 +386,13 @@
     "    # |     + K_(j-1)*rho_(j-1)^( Gamma_(j-1) - 1 )/( Gamma_(j-1) - 1 ) |\n",
     "    # |     - K_(j+0)*rho_(j-1)^( Gamma_(j+0) - 1 )/( Gamma_(j+0) - 1 ) |\n",
     "    # .-----------------------------------------------------------------.\n",
+    "    eos.eps_integ_const_tab[0] = 0.0\n",
     "    for j in range(1,eos.neos):\n",
     "        # Second line of the boxed equation above\n",
-    "        aux_jm1 = eos.K_poly_tab[j-1]*eos.rho_poly_tab[j-1]**(eos.Gamma_poly_tab[j-1]-1)/(eos.Gamma_poly_tab[j-1]-1)\n",
+    "        aux_jm1 = eos.K_poly_tab[j-1]*eos.rho_poly_tab[j-1]**(eos.Gamma_poly_tab[j-1]-1.0)/(eos.Gamma_poly_tab[j-1]-1.0)\n",
     "        \n",
     "        # Third line of the boxed equation above\n",
-    "        aux_jp0 = eos.K_poly_tab[j+0]*eos.rho_poly_tab[j-1]**(eos.Gamma_poly_tab[j+0]-1)/(eos.Gamma_poly_tab[j+0]-1)\n",
+    "        aux_jp0 = eos.K_poly_tab[j+0]*eos.rho_poly_tab[j-1]**(eos.Gamma_poly_tab[j+0]-1.0)/(eos.Gamma_poly_tab[j+0]-1.0)\n",
     "        \n",
     "        # Boxed equation above\n",
     "        eos.eps_integ_const_tab[j] = eos.eps_integ_const_tab[j-1] + aux_jm1 - aux_jp0\n",
@@ -902,7 +903,7 @@
     "    # .-------------------------------------------------.\n",
     "    # | eps_cold = C_j + P_cold/(rho_b*( Gamma_j - 1 )) |\n",
     "    # .-------------------------------------------------.\n",
-    "    eps_cold = eos.eps_integ_const_tab[j] + (P/rho_b*(Gamma - 1))\n",
+    "    eps_cold = eos.eps_integ_const_tab[j] + (P/(rho_b*(Gamma - 1)))\n",
     "    \n",
     "    return rho_b, eps_cold"
    ]
@@ -1539,15 +1540,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(290673, 290673, 290673, 290673, 290673)\n",
-      "Just generated a TOV star with R_Schw = 2.900921866966878e-01 , M = 5.972831860622731e-02 , M/R_Schw = 2.058942685990973e-01 .\n"
+      "(7299, 7299, 7299, 7299, 7299)\n",
+      "Just generated a TOV star with R_Schw = 3.295814507806311e-01 , M = 1.016902316454392e-01 , M/R_Schw = 3.085435524498739e-01 .\n"
      ]
     }
    ],
@@ -1566,24 +1567,25 @@
     "\n",
     "# Set up the initial condition for the pressure by\n",
     "# selecting a central baryon density\n",
-    "rhob_central = 2.42797\n",
+    "rhob_central = 2.0\n",
     "\n",
     "# Set the initial value of M and R_Schw based\n",
     "# on the initial central density\n",
+    "!rm -f rhob_P_cold_and_eps_cold.dat\n",
     "Mass_TOV, R_TOV = TOV.TOV_Solver(eos,rho_baryon_central=rhob_central,verbose=True,return_M_and_RSchw=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M =  0.059728 code units   | R =  0.290102 code units | C = 0.205888\n",
-      "M =  1.483951 solar masses | R = 10.645716 km         | C = 0.139394\n"
+      "M =  0.101690 code units   | R =  0.329581 code units | C = 0.308544\n",
+      "M =  2.526489 solar masses | R = 12.094477 km         | C = 0.208896\n"
      ]
     }
    ],
@@ -1615,15 +1617,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0.302925"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M =  0.059728 code units   | R =  0.290102 code units | C = 0.205887\n",
-      "M =  1.483947 solar masses | R = 10.645716 km         | C = 0.139394\n"
+      "M =  0.096453 code units   | R =  0.318931 code units | C = 0.302425\n",
+      "M =  2.396367 solar masses | R = 11.703661 km         | C = 0.204754\n"
      ]
     }
    ],
@@ -1668,9 +1679,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb to latex\n",
+      "[NbConvertApp] Support files will be in Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs_files/\n",
+      "[NbConvertApp] Making directory Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs_files\n",
+      "[NbConvertApp] Making directory Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs_files\n",
+      "[NbConvertApp] Writing 165407 bytes to Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb\n",
