--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -21,9 +21,9 @@
     "\n",
     "## This module generates `BaikalETK`, an [Einstein Toolkit](https://einsteintoolkit.org) thorn for solving Einstein's equations in the BSSN formalism, in Cartesian coordinates. It features SIMD intrinsics and OpenMP support.\n",
     "\n",
-    "**Module Status:** <font color='red'><b> Not yet validated, work-in-progress </b></font>\n",
+    "**Module Status:** <font color='orange'><b> Validated against the Einstein Toolkit `McLachlan` BSSN thorn, both in the context of black hole binary simulations (excellent gravitational waveform agreement) as well as binary neutron star simulations (when parameter `add_stress_energy_source_terms` below is set to `True`). Once plots demonstrating this agreement are added to this tutorial module, the validation status will be set to</b></font> <font color='green'><b>Validated</b></font>.\n",
     "\n",
-    "**Validation Notes:** This tutorial module has not yet been validated.\n",
+    "**Validation Notes:** This tutorial module has been validated against a trusted Einstein Toolkit thorn, but plots demonstrating its validation have yet to be included in this notebook.\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -1680,7 +1680,7 @@
    "source": [
     "with open(os.path.join(outdir,\"make.code.defn\"), \"w\") as file:\n",
     "    file.write(\"\"\"\n",
-    "# Main make.code.defn file for thorn IllinoisGRMHD\n",
+    "# Main make.code.defn file for thorn BaikalETK\n",
     "\n",
     "# Source files in this directory\n",
     "SRCS =\"\"\")\n",
