Tutorial-ETK_thorn-NRPyPlusTOVID: various updates; still a work in progress.

--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -167,7 +167,14 @@
     }
    ],
    "source": [
-    "%%writefile $outdir/InitialData.c\n",
+    "make_code_defn_list = []\n",
+    "def append_to_make_code_defn_list(filename):\n",
+    "    if filename not in make_code_defn_list:\n",
+    "        make_code_defn_list.append(filename)\n",
+    "    return os.path.join(outdir,filename)\n",
+    "\n",
+    "with open(append_to_make_code_defn_list(\"InitialData.c\"), \"w\") as file:\n",
+    "    file.write(\"\"\"\n",
     "#include <math.h>\n",
     "#include <stdio.h>\n",
     "#include <stdbool.h>\n",
@@ -182,12 +189,12 @@
     "#define vely (&vel[1*cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]])\n",
     "#define velz (&vel[2*cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]])\n",
     "\n",
-    "void FishboneMoncrief_KerrSchild(const cGH* restrict const cctkGH,const CCTK_INT *cctk_lsh,\n",
-    "                                 const CCTK_INT i0,const CCTK_INT i1,const CCTK_INT i2,\n",
-    "                                 const CCTK_REAL *xcoordGF,const CCTK_REAL *ycoordGF,const CCTK_REAL *zcoordGF,\n",
-    "                                 CCTK_REAL *alphaGF,CCTK_REAL *betaU0GF,CCTK_REAL *betaU1GF,CCTK_REAL *betaU2GF,\n",
-    "                                 CCTK_REAL *gammaDD00GF,CCTK_REAL *gammaDD01GF,CCTK_REAL *gammaDD02GF,CCTK_REAL *gammaDD11GF,CCTK_REAL *gammaDD12GF,CCTK_REAL *gammaDD22GF,\n",
-    "                                 CCTK_REAL     *KDD00GF,CCTK_REAL     *KDD01GF,CCTK_REAL     *KDD02GF,CCTK_REAL     *KDD11GF,CCTK_REAL     *KDD12GF,CCTK_REAL     *KDD22GF)\n",
+    "void NRPyPlusTOVID(const cGH* restrict const cctkGH,const CCTK_INT *cctk_lsh,\n",
+    "                   const CCTK_INT i0,const CCTK_INT i1,const CCTK_INT i2,\n",
+    "                   const CCTK_REAL *xcoordGF,const CCTK_REAL *ycoordGF,const CCTK_REAL *zcoordGF,\n",
+    "                   CCTK_REAL *alphaGF,CCTK_REAL *betaU0GF,CCTK_REAL *betaU1GF,CCTK_REAL *betaU2GF,\n",
+    "                   CCTK_REAL *gammaDD00GF,CCTK_REAL *gammaDD01GF,CCTK_REAL *gammaDD02GF,CCTK_REAL *gammaDD11GF,CCTK_REAL *gammaDD12GF,CCTK_REAL *gammaDD22GF,\n",
+    "                   CCTK_REAL     *KDD00GF,CCTK_REAL     *KDD01GF,CCTK_REAL     *KDD02GF,CCTK_REAL     *KDD11GF,CCTK_REAL     *KDD12GF,CCTK_REAL     *KDD22GF)\n",
     "{\n",
     "  \n",
     "  DECLARE_CCTK_PARAMETERS\n",
@@ -544,8 +551,20 @@
     }
    ],
    "source": [
-    "%%writefile $outdir/make.code.defn\n",
-    "SRCS = InitialData.c"
+    "with open(os.path.join(outdir,\"make.code.defn\"), \"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "# Main make.code.defn file for thorn NRPyPlusTOVID\n",
+    "\n",
+    "# Source files in this directory\n",
+    "SRCS =\"\"\")\n",
+    "    filestring = \"\"\n",
+    "    for i in range(len(make_code_defn_list)):\n",
+    "        filestring += \"      \"+make_code_defn_list[i]\n",
+    "        if i != len(make_code_defn_list)-1:\n",
+    "            filestring += \" \\\\\\n\"\n",
+    "        else:\n",
+    "            filestring += \"\\n\"\n",
+    "    file.write(filestring)"
    ]
   },
   {
