Tutorial-ETK_thorn-NRPyPlusTOVID: continue work. Realizing that it'd be very useful if the TOV solver also output rho_baryonic

--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -190,16 +190,23 @@
    "source": [
     "### Step 2.a.ii: Convert TOV solution quantities to `HydroBase` variables $\\left\\{P,\\rho_{\\rm baryonic},\\epsilon,v_{\\rm (n)}^i\\right\\}$\n",
     "\n",
-    "The TOV solver generates $P$ and the *total* energy density $\\rho$. The `HydroBase` quantities $\\rho_{\\rm HydroBase}$ and $P$ are given by\n",
+    "The TOV solver generates pressure $P$ and the *total* energy density $\\rho$ as a function of the stellar radius (in isotropic coordinates by default). \n",
+    "\n",
+    "The `HydroBase` quantities $\\rho_{\\rm baryonic}$, internal energy $\\epsilon$, and pressure $P$ are given in terms of these variables via\n",
     "\n",
     "\\begin{align}\n",
-    "\\rho &= \\rho_{\\rm HydroBase} (1 + \\epsilon_{\\rm cold}) \\\\\n",
-    " &= \\rho_{\\rm HydroBase} (1 + \\epsilon_{\\rm cold}) \\\\\n",
+    "\\epsilon &= \\epsilon_{\\rm cold} \\\\\n",
+    "\\rho &= \\rho_{\\rm baryonic} \\left(1 + \\epsilon_{\\rm cold}(P)\\right) \\\\\n",
+    "\\implies \\rho_{\\rm baryonic} &= \\frac{\\rho}{1 + \\epsilon_{\\rm cold}(P)} \\\\\n",
+    "P_{\\rm HydroBase} &= P, \\\\\n",
     "\\end{align}\n",
+    "where the internal energy $\\epsilon_{\\rm cold}=\\epsilon$ is given as a function of pressure as described in [the NRPy+ piecewise polytrope tutorial module](Tutorial-TOV-Implementation_of_Single_and_Piecewise_Polytrope_EOSs.ipynb#rhob_from_pcold).\n",
     "\n",
+    "The TOV star is motionless, with all spatial components of the 4-velocity $u^i=0$ and (as seen above) zero shift $\\beta^i$. Thus the Valencia 3-velocity (i.e., the 3-velocity normal to the spatial slice) $v_{\\rm (n)}^i$ is given by\n",
     "\n",
-    "\n",
-    "The TOV star is motionless, with all spatial components of the 4-velocity $u^i=0$ and (as seen above) zero shift $\\beta^i$. Thus we have"
+    "$$\n",
+    "v_{\\rm (n)}^i = 0\n",
+    "$$"
    ]
   },
   {
