--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro-opt.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro-opt.ipynb
@@ -278,8 +278,31 @@
     }
    ],
    "source": [
+    "############################\n",
+    "# Single polytrope example #\n",
+    "############################\n",
+    "import TOV.Implementation_of_Single_and_Piecewise_Polytrope_EOSs as ppeos\n",
+    "\n",
+    "# Set neos = 1 (single polytrope)\n",
+    "neos = 1\n",
+    "\n",
+    "# Set rho_poly_tab (not needed for a single polytrope)\n",
+    "rho_poly_tab = []\n",
+    "\n",
+    "# Set Gamma_poly_tab\n",
+    "Gamma_poly_tab = [2.0]\n",
+    "\n",
+    "# Set K_poly_tab0\n",
+    "K_poly_tab0 = 1. # ZACH NOTES: CHANGED FROM 100.\n",
+    "\n",
+    "# Set the eos quantities\n",
+    "eos = ppeos.set_up_EOS_parameters__complete_set_of_input_variables(neos,rho_poly_tab,Gamma_poly_tab,K_poly_tab0)\n",
+    "\n",
     "import TOV.TOV_Solver as TOV\n",
-    "TOV.TOV_Solver()"
+    "TOV.TOV_Solver(eos,\n",
+    "               outfile=\"outputTOVpolytrope.txt\",\n",
+    "               rho_baryon_central=0.129285,\n",
+    "               verbose = True)"
    ]
   },
   {
@@ -391,12 +414,12 @@
     "      const REAL th = xyz_or_rthph[1];\n",
     "      const REAL ph = xyz_or_rthph[2];\n",
     "\n",
-    "      REAL rho,P,M,expnu,exp4phi;\n",
+    "      REAL rho,rho_baryon,P,M,expnu,exp4phi;\n",
     "      TOV_interpolate_1D(r,other_inputs.Rbar,other_inputs.Rbar_idx,other_inputs.interp_stencil_size,  \n",
     "                         other_inputs.numlines_in_file,\n",
-    "                         other_inputs.r_Schw_arr,other_inputs.rho_arr,other_inputs.P_arr,other_inputs.M_arr,\n",
-    "                         other_inputs.expnu_arr,other_inputs.exp4phi_arr,other_inputs.rbar_arr,  \n",
-    "                         &rho,&P,&M,&expnu,&exp4phi);\n",
+    "                         other_inputs.r_Schw_arr,other_inputs.rho_arr,other_inputs.rho_baryon_arr,other_inputs.P_arr,other_inputs.M_arr,\n",
+    "                         other_inputs.expnu_arr,other_inputs.exp4phi_arr,other_inputs.rbar_arr,\n",
+    "                         &rho,&rho_baryon,&P,&M,&expnu,&exp4phi);\n",
     "    \n",
     "      *alpha = sqrt(expnu);\n",
     "      // \\gamma_{rbar rbar} = exp(4 phi)\n",
@@ -441,12 +464,12 @@
     "      const REAL th = xyz_or_rthph[1];\n",
     "      const REAL ph = xyz_or_rthph[2];\n",
     "\n",
-    "      REAL rho,P,M,expnu,exp4phi;\n",
+    "      REAL rho,rho_baryon,P,M,expnu,exp4phi;\n",
     "      TOV_interpolate_1D(r,other_inputs.Rbar,other_inputs.Rbar_idx,other_inputs.interp_stencil_size,  \n",
     "                         other_inputs.numlines_in_file,\n",
-    "                         other_inputs.r_Schw_arr,other_inputs.rho_arr,other_inputs.P_arr,other_inputs.M_arr,\n",
+    "                         other_inputs.r_Schw_arr,other_inputs.rho_arr,other_inputs.rho_baryon_arr,other_inputs.P_arr,other_inputs.M_arr,\n",
     "                         other_inputs.expnu_arr,other_inputs.exp4phi_arr,other_inputs.rbar_arr,\n",
-    "                         &rho,&P,&M,&expnu,&exp4phi);\n",
+    "                         &rho,&rho_baryon,&P,&M,&expnu,&exp4phi);\n",
     "\n",
     "      //T^tt = e^(-nu) * rho\n",
     "      *T4UU00 = rho / expnu;\n",
@@ -1293,7 +1316,7 @@
     "    int Rbar_idx;\n",
     "    int interp_stencil_size;\n",
     "    int numlines_in_file;\n",
-    "    REAL *r_Schw_arr,*rho_arr,*P_arr,*M_arr,*expnu_arr,*exp4phi_arr,*rbar_arr;\n",
+    "    REAL *r_Schw_arr,*rho_arr,*rho_baryon_arr,*P_arr,*M_arr,*expnu_arr,*exp4phi_arr,*rbar_arr;\n",
     "} ID_inputs;\n",
     "\n",
     "// Part P11: Declare all functions for setting up TOV initial data.\n",
@@ -1327,16 +1350,18 @@
     "    // Count the number of lines in the data file:\n",
     "    int numlines_in_file = count_num_lines_in_file(in1Dpolytrope);\n",
     "    // Allocate space for all data arrays:\n",
-    "    REAL *r_Schw_arr  = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    REAL *rho_arr     = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    REAL *P_arr       = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    REAL *M_arr       = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    REAL *expnu_arr   = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    REAL *exp4phi_arr = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
-    "    REAL *rbar_arr    = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
+    "    REAL *r_Schw_arr     = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
+    "    REAL *rho_arr        = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
+    "    REAL *rho_baryon_arr = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
+    "    REAL *P_arr          = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
+    "    REAL *M_arr          = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
+    "    REAL *expnu_arr      = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
+    "    REAL *exp4phi_arr    = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
+    "    REAL *rbar_arr       = (REAL *)malloc(sizeof(REAL)*numlines_in_file);\n",
     "\n",
     "    // Read from the data file, filling in arrays\n",
-    "    if(read_datafile__set_arrays(in1Dpolytrope, r_Schw_arr,rho_arr,P_arr,M_arr,expnu_arr,exp4phi_arr,rbar_arr) == 1) {\n",
+    "    // read_datafile__set_arrays() may be found in TOV/tov_interp.h\n",
+    "    if(read_datafile__set_arrays(in1Dpolytrope, r_Schw_arr,rho_arr,rho_baryon_arr,P_arr,M_arr,expnu_arr,exp4phi_arr,rbar_arr) == 1) {\n",
     "        fprintf(stderr,\"ERROR WHEN READING FILE %s!\\n\",filename);\n",
     "        exit(1);\n",
     "    }\n",
@@ -1359,13 +1384,14 @@
     "    TOV_in.interp_stencil_size = interp_stencil_size;\n",
     "    TOV_in.numlines_in_file = numlines_in_file;\n",
     "    \n",
-    "    TOV_in.r_Schw_arr = r_Schw_arr;\n",
-    "    TOV_in.rho_arr = rho_arr;\n",
-    "    TOV_in.P_arr = P_arr;\n",
-    "    TOV_in.M_arr = M_arr;\n",
-    "    TOV_in.expnu_arr = expnu_arr;\n",
-    "    TOV_in.exp4phi_arr = exp4phi_arr;\n",
-    "    TOV_in.rbar_arr = rbar_arr;\n",
+    "    TOV_in.r_Schw_arr     = r_Schw_arr;\n",
+    "    TOV_in.rho_arr        = rho_arr;\n",
+    "    TOV_in.rho_baryon_arr = rho_baryon_arr;\n",
+    "    TOV_in.P_arr          = P_arr;\n",
+    "    TOV_in.M_arr          = M_arr;\n",
+    "    TOV_in.expnu_arr      = expnu_arr;\n",
+    "    TOV_in.exp4phi_arr    = exp4phi_arr;\n",
+    "    TOV_in.rbar_arr       = rbar_arr;\n",
     "    /* END TOV INPUT ROUTINE */\n",
     "    \n",
     "\n",
@@ -1677,6 +1703,12 @@
     "    // Step 4: Free all allocated memory\n",
     "#include \"rfm_files/rfm_struct__freemem.h\"\n",
     "#include \"boundary_conditions/bcstruct_freemem.h\"\n",
+    "    free(rbar_arr);\n",
+    "    free(rho_arr);\n",
+    "    free(rho_baryon_arr);\n",
+    "    free(P_arr);\n",
+    "    free(M_arr);\n",
+    "    free(expnu_arr);\n",
     "#include \"MoLtimestepping/RK_Free_Memory.h\"\n",
     "    free(auxevol_gfs);\n",
     "    for(int i=0;i<3;i++) free(xx[i]);\n",
