Tutorial-ADM_Initial_Data-TOV: Fixed a few minor aspects of the notebook so that it matches the latest version of our TOV solver. Restored LaTeX output functionality, whch had been commented out.

--- a/Tutorial-ADM_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_Initial_Data-TOV.ipynb
@@ -148,17 +148,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for div: 'list' and 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-d720d422b91e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    225\u001b[0m \u001b[0mrho_baryon_central\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0;36m0.129285\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    226\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 227\u001b[0;31m \u001b[0mM_TOV\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR_Schw_TOV\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTOV_Solver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meos\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"outputTOVpolytrope.txt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrho_baryon_central\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.129285\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mverbose\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mreturn_M_and_RSchw\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"medium\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mintegrator_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"default\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-2-d720d422b91e>\u001b[0m in \u001b[0;36mTOV_Solver\u001b[0;34m(eos, outfile, rho_baryon_central, verbose, return_M_and_RSchw, accuracy, integrator_type)\u001b[0m\n\u001b[1;32m    197\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m     \u001b[0;31m# Integrate the initial condition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 199\u001b[0;31m     \u001b[0mR_Schw_TOV\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mM_TOV\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mintegrateStar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mP_initial_condition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    200\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m         \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Just generated a TOV star with R_Schw = %.15e , M = %.15e , M/R_Schw = %.15e .\"\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mR_Schw_TOV\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mM_TOV\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mM_TOV\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mR_Schw_TOV\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-d720d422b91e>\u001b[0m in \u001b[0;36mintegrateStar\u001b[0;34m(eos, P, dumpData)\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[0;31m#             rhoArr_np.append(rho)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 179\u001b[0;31m         \u001b[0mrho_baryon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meps_cold\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mppeos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPolytrope_EOS__compute_rhob_and_eps_cold_from_P_cold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meos\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mPArr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    180\u001b[0m         \u001b[0mrhoArr_np\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1.0\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0meps_cold\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mrho_baryon\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    181\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/leo/nrpy/nrpytutorial/TOV/Implementation_of_Single_and_Piecewise_Polytrope_EOSs.py\u001b[0m in \u001b[0;36mPolytrope_EOS__compute_rhob_and_eps_cold_from_P_cold\u001b[0;34m(eos, P)\u001b[0m\n\u001b[1;32m    473\u001b[0m     \u001b[0;31m# | rho_b = (P_cold/K_j)^(1/Gamma_j) |\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    474\u001b[0m     \u001b[0;31m# .----------------------------------.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 475\u001b[0;31m     \u001b[0mrho_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mP\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0meos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mK_poly_tab\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mGamma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    476\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    477\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mrho_b\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPolytrope_EOS__compute_eps_cold_from_rhob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrho_b\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for div: 'list' and 'float'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1256, 1256, 1256, 1256, 1256, 1256)\n",
+      "Just generated a TOV star with R_Schw = 9.566044579232513e-01 , M = 1.405030336771405e-01 , M/R_Schw = 1.468768334847266e-01 .\n"
      ]
     }
    ],
@@ -196,11 +190,12 @@
     "\n",
     "def TOV_Solver(eos,\n",
     "               outfile = \"outputTOVpolytrope.txt\",\n",
-    "               rho_baryon_central=0.129285,\n",
+    "               rho_baryon_central = 0.129285,\n",
     "               verbose = True,\n",
     "               return_M_and_RSchw = False,\n",
-    "               accuracy=\"medium\",\n",
-    "               integrator_type=\"default\"):\n",
+    "               accuracy = \"medium\",\n",
+    "               integrator_type = \"default\",\n",
+    "               no_output_File = False):\n",
     "    \n",
     "    def TOV_rhs(r_Schw, y) : \n",
     "    # In \\tilde units\n",
@@ -302,6 +297,9 @@
     "        M = mArr[-1]\n",
     "        R_Schw = r_SchwArr[-1]\n",
     "\n",
+    "        if no_output_File == True:\n",
+    "            return R_Schw, M\n",
+    "        \n",
     "        # Apply integration constant to ensure rbar is continuous across TOV surface\n",
     "        for ii in range(len(rbarArr)):\n",
     "            rbarArr[ii] *= 0.5*(np.sqrt(R_Schw*(R_Schw - 2.0*M)) + R_Schw - M) / rbarArr[-1]\n",
@@ -335,14 +333,11 @@
     "        confFactor_exp4phi_np = (r_SchwArr_np/rbarArr_np)**2\n",
     "\n",
     "        # Compute the *total* mass-energy density (as opposed to the *baryonic* mass density)\n",
-    "#         rhoArr_np = []\n",
-    "#         for i in range(len(PArr)):\n",
-    "#             rho_baryon, eps_cold = ppeos.Polytrope_EOS__compute_rhob_and_eps_cold_from_P_cold(eos,PArr[i])\n",
-    "#             rho = (1.0 + eps_cold ) * rho_baryon\n",
-    "#             rhoArr_np.append(rho)\n",
-    "\n",
-    "        rho_baryon, eps_cold = ppeos.Polytrope_EOS__compute_rhob_and_eps_cold_from_P_cold(eos,PArr)\n",
-    "        rhoArr_np = (1.0 + eps_cold ) * rho_baryon\n",
+    "        rhoArr_np = []\n",
+    "        for i in range(len(PArr)):\n",
+    "            rho_baryon, eps_cold = ppeos.Polytrope_EOS__compute_rhob_and_eps_cold_from_P_cold(eos,PArr[i])\n",
+    "            rho = (1.0 + eps_cold ) * rho_baryon\n",
+    "            rhoArr_np.append(rho)\n",
     "\n",
     "        if verbose:\n",
     "            print(len(r_SchwArr_np),len(rhoArr_np),len(rho_baryonArr_np),len(PArr_np),len(mArr_np),len(exp2phiArr_np))\n",
@@ -409,9 +404,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1256, 1256, 1256, 1256, 1256, 1256)\n",
+      "Just generated a TOV star with R_Schw = 9.566044579232513e-01 , M = 1.405030336771405e-01 , M/R_Schw = 1.468768334847266e-01 .\n",
+      "TOV initial data test PASSED.\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3: Code Validation against TOV.TOV_Solver module\n",
     "\n",
@@ -423,7 +428,8 @@
     "               rho_baryon_central=0.129285,\n",
     "               verbose = True,\n",
     "               accuracy=\"medium\",\n",
-    "               integrator_type=\"default\")\n",
+    "               integrator_type=\"default\",\n",
+    "               no_output_File = False)\n",
     "\n",
     "if filecmp.cmp('outputTOVpolytrope.txt',\n",
     "               'outputTOVpolytrope-validation.txt') == False:\n",
@@ -448,15 +454,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-TOV.ipynb to latex\n",
+      "[NbConvertApp] Writing 56366 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
    "source": [
-    "# !jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ADM_Initial_Data-TOV.ipynb\n",
-    "# !pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-TOV.tex\n",
-    "# !pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-TOV.tex\n",
-    "# !pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-TOV.tex\n",
-    "# !rm -f Tut*.out Tut*.aux Tut*.log"
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ADM_Initial_Data-TOV.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-TOV.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-TOV.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-TOV.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
